@@ -1,15 +1,14 @@
 package fr.iban.bukkitcore.commands;
 
 import fr.iban.bukkitcore.CoreBukkitPlugin;
-import fr.iban.bukkitcore.commands.annotation.Online;
 import fr.iban.bukkitcore.manager.TeleportManager;
+import fr.iban.common.model.MSPlayerProfile;
 import fr.iban.common.teleport.RequestType;
 import fr.iban.common.teleport.TpRequest;
 import org.bukkit.entity.Player;
 import revxrsal.commands.annotation.Command;
 import revxrsal.commands.annotation.Named;
 import revxrsal.commands.annotation.Optional;
-import revxrsal.commands.annotation.Usage;
 import revxrsal.commands.bukkit.annotation.CommandPermission;
 
 import java.util.UUID;
@@ -27,56 +26,67 @@ public class TeleportCommands {
 
     @Command("tpa")
     @CommandPermission("core.tpa")
-    public void tpa(Player sender, @Named("cible") @Online UUID target) {
-        if (target.equals(sender.getUniqueId())) {
+    public void tpa(Player sender, @Named("cible") MSPlayerProfile target) {
+        UUID targetUniqueId = target.getUniqueId();
+
+        if (targetUniqueId.equals(sender.getUniqueId())) {
             sender.sendMessage("§cVous ne pouvez pas vous téléporter à vous même.");
             return;
         }
 
-        teleportManager.sendTeleportRequest(sender.getUniqueId(), target, RequestType.TP);
+        teleportManager.sendTeleportRequest(sender.getUniqueId(), targetUniqueId, RequestType.TP);
     }
 
     @Command("tp")
     @CommandPermission("core.tp")
-    public void tp(Player sender, @Named("cible") @Online UUID target) {
-        if (target.equals(sender.getUniqueId())) {
+    public void tp(Player sender, @Named("cible") MSPlayerProfile target) {
+        UUID targetUniqueId = target.getUniqueId();
+
+        if (targetUniqueId.equals(sender.getUniqueId())) {
             sender.sendMessage("§cVous ne pouvez pas vous téléporter à vous même.");
             return;
         }
-        plugin.getTeleportManager().teleport(sender.getUniqueId(), target);
+
+        plugin.getTeleportManager().teleport(sender.getUniqueId(), targetUniqueId);
     }
 
     @Command("tpahere")
     @CommandPermission("core.tpahere")
-    public void tpahere(Player sender, @Named("cible") @Online UUID target) {
-        if (target.equals(sender.getUniqueId())) {
+    public void tpahere(Player sender, @Named("cible") MSPlayerProfile target) {
+        UUID targetUniqueId = target.getUniqueId();
+
+        if (targetUniqueId.equals(sender.getUniqueId())) {
             sender.sendMessage("§cVous ne pouvez pas vous téléporter à vous même.");
             return;
         }
 
-        teleportManager.sendTeleportRequest(sender.getUniqueId(), target, RequestType.TPHERE);
+        teleportManager.sendTeleportRequest(sender.getUniqueId(), targetUniqueId, RequestType.TPHERE);
     }
 
     @Command({"tphere", "s"})
     @CommandPermission("core.tphere")
-    public void tphere(Player sender, @Named("cible") @Online UUID target) {
-        if (target.equals(sender.getUniqueId())) {
+    public void tphere(Player sender, @Named("cible") MSPlayerProfile target) {
+        UUID targetUniqueId = target.getUniqueId();
+
+        if (targetUniqueId.equals(sender.getUniqueId())) {
             sender.sendMessage("§cVous ne pouvez pas vous téléporter à vous même.");
             return;
         }
-        plugin.getTeleportManager().teleport(target, sender.getUniqueId());
+
+        plugin.getTeleportManager().teleport(targetUniqueId, sender.getUniqueId());
     }
 
     @Command({"tpyes", "tpaccept"})
     @CommandPermission("core.tpyes")
-    public void tpyes(Player sender, @Optional @Online UUID target) {
+    public void tpyes(Player sender, @Optional MSPlayerProfile target) {
         if (target != null) {
-            TpRequest request = teleportManager.getTpRequestFrom(sender, target);
+            UUID targetUniqueId = target.getUniqueId();
+            TpRequest request = teleportManager.getTpRequestFrom(sender, targetUniqueId);
             if (request != null) {
                 if (request.getRequestType() == RequestType.TP) {
-                    teleportManager.teleport(target, sender.getUniqueId(), 3);
+                    teleportManager.teleport(targetUniqueId, sender.getUniqueId(), 3);
                 } else if (request.getRequestType() == RequestType.TPHERE) {
-                    teleportManager.teleport(sender.getUniqueId(), target, 3);
+                    teleportManager.teleport(sender.getUniqueId(), targetUniqueId, 3);
                 }
                 sender.sendMessage("§aDemande de téléportation acceptée.");
                 teleportManager.removeTpRequest(sender.getUniqueId(), request);
@@ -84,7 +94,7 @@ public class TeleportCommands {
                 sender.sendMessage("§cVous n'avez pas de requête de téléportation de ce joueur.");
             }
         } else if (!teleportManager.getTpRequests(sender).isEmpty()) {
-            TpRequest request = teleportManager.getTpRequests(sender).get(teleportManager.getTpRequests(sender).size() - 1);
+            TpRequest request = teleportManager.getTpRequests(sender).getLast();
             if (request.getRequestType() == RequestType.TP) {
                 teleportManager.teleport(request.getPlayerFrom(), request.getPlayerTo(), 3);
             } else if (request.getRequestType() == RequestType.TPHERE) {
@@ -99,9 +109,10 @@ public class TeleportCommands {
 
     @Command({"tpno", "tpdeny"})
     @CommandPermission("core.tpno")
-    public void tpno(Player sender, @Optional @Online UUID target) {
+    public void tpno(Player sender, @Optional MSPlayerProfile target) {
         if (target != null) {
-            TpRequest request = teleportManager.getTpRequestFrom(sender, target);
+            UUID targetUniqueId = target.getUniqueId();
+            TpRequest request = teleportManager.getTpRequestFrom(sender, targetUniqueId);
             if (request != null) {
                 sender.sendMessage("§cDemande de téléportation rejetée.");
                 teleportManager.removeTpRequest(sender.getUniqueId(), request);
@@ -109,7 +120,7 @@ public class TeleportCommands {
                 sender.sendMessage("§cVous n'avez pas de requête de téléportation de ce joueur.");
             }
         } else if (!teleportManager.getTpRequests(sender).isEmpty()) {
-            TpRequest request = (TpRequest) teleportManager.getTpRequests(sender).get(teleportManager.getTpRequests(sender).size() - 1);
+            TpRequest request = teleportManager.getTpRequests(sender).getLast();
             sender.sendMessage("§cDemande de téléportation rejetée.");
             teleportManager.removeTpRequest(sender.getUniqueId(), request);
         } else {
